change htm to html

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -6,7 +6,7 @@
 <head>
 	<!-- Basic Meta Tags -->
   <meta charset="utf-8">
-  <title>Shyam Software</title>
+  <title>Shyam Software Contact</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,7 +46,7 @@
         <!-- Logo -->
         <div class="span3">
           <div class="logo">
-            <a href="index.htm"><img src="img/logo-header.png" alt=""></a>
+            <a href="index.html"><img src="img/logo-header.png" alt=""></a>
           </div>            
         </div>
 
@@ -56,72 +56,35 @@
                	<a href="#nav" title="Show navigation">Show navigation</a>
 	            <a href="#" title="Hide navigation">Hide navigation</a>
 	            <ul class="clearfix">
-	        <li><a href="index.htm" title="">Home</a></li>
-	        <li class="active"><a href="about-us.htm" title="">About Us</a></li>
-                <li><a href="gallery.htm" title="">Proucts</a></li>
-                <li><a href="contact.htm" title="">Contact</a>      
+	        <li><a href="index.html" title="">Home</a></li>
+                <li><a href="about-us.html" title="">About Us</a></li>                
+                <li><a href="gallery.html" title="">Proucts</a></li>
+                <li class="active"><a href="contact.html" title="">Contact</a>
                </li>
 	           </ul>
           </nav>
          </div> 
       </div> 
        <div class="row space40"></div>
+          <div class="slider1 flexslider">  <!-- Slider -->
+            <ul class="slides">
+              <li>
+    	    	    <img src="img/slider/1.jpg" alt="">
+    	    		</li>
+    	    		<li>
+    	    	    <img src="img/slider/2.jpg" alt="">
+    	    		</li>
+    	    		<li>
+    	    	    <img src="img/slider/3.jpg" alt="">
+    	    		</li>
+                    <li>
+    	    	    <img src="img/slider/4.jpg" alt="">
+    	    		</li>
+            </ul>
+          </div>  <!-- Slider End -->
   </div> 
-</header><!-- Header End -->
-
-<!-- Titlebar
-================================================== -->
-<section id="titlebar">
-	<!-- Container -->
-	<div class="container">
-	
-		<div class="eight columns">
-			<h3 class="left">About</h3>
-		</div>
-		
-		<div class="eight columns">
-			<nav id="breadcrumbs">
-				<ul>
-					<li>You are here:</li>
-					<li><a href="#">Home</a></li>
-					<li>About</li>
-				</ul>
-			</nav>
-		</div>
-
-	</div>
-	<!-- Container / End -->
-</section>
-
-  <!-- Content -->
-  <div id="content">
-    <div class="container">
-
-      <div class="row">
-        <div class="span16">
-          <h4>Who We Are?</h4>
-<blockquote class="hero-Say Technologies">
-<p>We are leading software-developing company in India in the state of Gujarat in the field of
-	back-office software industry. We typically serve 10 to 20 clients a year, running one or several projects for each in all over India.
-	We are in this field since 2012. We also have software to maintain retail store/distributors.We have almost all modules that are required for any small or big retail outlet. Any
-	modules can be attached any time as per budget or as per expansion of outlet or as per
-	planning for computerization.</p>
-<p>We are a flexible, customer-friendly firm that wants to add measurable value to your business. And we respond to differing needs with a financial flexibility that makes us particularly attractive to smaller businesses and start ups.</p>   
-<p style="text-align:justify">Our  highly experienced IT professionals produce an impressive, high performance software that will communicate your business to the world. We will implement the latest technologies in developing your software and our experienced marketing managers and consultants will drive qualified, targeted sales leads from the major search engines to your Software.</p>
-          <div class="row space10"></div>  
-         </div>
-
-        <div class="span12">        
-          <img src="img/image02.png" alt="">
-        </div>
-<p>
-.
-</p>
-	</div>                     
-  </div>
-
-
-  <!-- Content End -->
+</header>
+  <!-- Header End -->
   
   <!-- Footer -->
   <footer id="footer">
