--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
         <!-- Logo -->
         <div class="span3">
           <div class="logo">
-            <a href="index.htm"><img src="img/logo-header.png" alt=""></a>
+            <a href="index.html"><img src="img/logo-header.png" alt=""></a>
           </div>            
         </div>
 
@@ -56,10 +56,10 @@
                	<a href="#nav" title="Show navigation">Show navigation</a>
 	            <a href="#" title="Hide navigation">Hide navigation</a>
 	            <ul class="clearfix">
-	        <li><a href="index.htm" title="">Home</a></li>
-                <li><a href="about-us.htm" title="">About Us</a></li>                
-                <li class="active"><a href="gallery.htm" title="">Proucts</a></li>
-                <li><a href="contact.htm" title="">Contact</a>
+	        <li><a href="index.html" title="">Home</a></li>
+                <li><a href="about-us.html" title="">About Us</a></li>                
+                <li class="active"><a href="gallery.html" title="">Proucts</a></li>
+                <li><a href="contact.html" title="">Contact</a>
                </li>
 	           </ul>
           </nav>
