--- a/components.html
+++ b/components.html
@@ -46,7 +46,7 @@
         <!-- Logo -->
         <div class="span3">
           <div class="logo">
-            <a href="index.htm"><img src="img/logo-header.png" alt=""></a>
+            <a href="index.html"><img src="img/logo-header.png" alt=""></a>
           </div>            
         </div>
 
@@ -56,16 +56,16 @@
                	<a href="#nav" title="Show navigation">Show navigation</a>
 	            <a href="#" title="Hide navigation">Hide navigation</a>
 	            <ul class="clearfix">
-	           	<li class="active"><a href="index.htm" title="">Home</a></li>
-                <li><a href="about-us.htm" title="">About Us</a></li>                
-                <li><a href="gallery.htm" title="">Gallery</a></li>
-                <li><a href="services.htm" title="">Services</a></li>
-                <li><a href="components.htm" title=""><span>Features</span></a>
+	           	<li class="active"><a href="index.html" title="">Home</a></li>
+                <li><a href="about-us.html" title="">About Us</a></li>                
+                <li><a href="gallery.html" title="">Gallery</a></li>
+                <li><a href="services.html" title="">Services</a></li>
+                <li><a href="components.html" title=""><span>Features</span></a>
   			      <ul> <!-- Submenu -->
-                      <li><a href="components.htm" title="">Components</a></li>
-                      <li><a href="blog.htm" title="">Blog</a></li>
-                      <li><a href="blog-detail.htm" title="">Blog Detail</a></li>
-                      <li><a href="contact.htm" title="">Contact</a></li>
+                      <li><a href="components.html" title="">Components</a></li>
+                      <li><a href="blog.html" title="">Blog</a></li>
+                      <li><a href="blog-detail.html" title="">Blog Detail</a></li>
+                      <li><a href="contact.html" title="">Contact</a></li>
   		         </ul> <!-- End Submenu -->      
                </li>
 	           </ul>
