--- a/about-us.html
+++ b/about-us.html
@@ -58,7 +58,7 @@
 	            <ul class="clearfix">
 	        <li><a href="index.html" title="">Home</a></li>
 	        <li class="active"><a href="about-us.html" title="">About Us</a></li>
-                <li><a href="gallery.html" title="">Proucts</a></li>
+                <li><a href="gallery.html" title="">Products</a></li>
                 <li><a href="contact.html" title="">Contact</a>      
                </li>
 	           </ul>
